create blog detail

--- a/src/app/layout-nav/side-nav/side-nav.component.html
+++ b/src/app/layout-nav/side-nav/side-nav.component.html
@@ -14,7 +14,7 @@
         </button>
         <!-- <span>Title Page</span> -->
       </mat-toolbar>
-      <div class="blog-content">
+      <div class="blog-content" align="center">
         <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
