--- a/src/app/layout-nav/side-nav/side-nav.component.scss
+++ b/src/app/layout-nav/side-nav/side-nav.component.scss
@@ -1,23 +1,41 @@
 .sidenav-container {
   height: 100%;
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .sidenav {
-  width: 200px;
-}
-
-.sidenav .mat-toolbar {
-  background: inherit;
+  width: 290px;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+  background: #fff;
 }
 
 .mat-toolbar.mat-primary {
-  position: fixed;
+  position: sticky;
   top: 0;
-  z-index: 1;
-  height: 50px;
-  border-bottom: 2px solid #fff;
+  z-index: 2;
 }
 
-.blog-content {
-  padding-top: 50px;
+.blog-toobar-fixed {
+  position: fixed;
+  z-index: 2;
+}
+
+.mat-sidenav-content {
+  background: #fff;
+}
+
+.full_right {
+  flex: 1 1 auto;
+}
+
+.m-r-5 {
+  margin-right: 10px;
+}
+
+.account-name {
+  font-size: 14px;
+  cursor: pointer;
 }
