create profile page

--- a/src/app/blog/list/list.component.html
+++ b/src/app/blog/list/list.component.html
@@ -12,7 +12,7 @@
     </mat-card-content>
     <mat-card-actions>
         <button #clappingBtn class="button-add-clap"><img src="https://tchol.org/images/clapping-emoji-png-7.png" class="image-clap"/>
-            {{ item.clapping }} claps</button>
+            {{ item.clap }} claps</button>
         
     </mat-card-actions>
 </mat-card>
