--- a/src/app/layout-nav/side-nav/side-nav.component.html
+++ b/src/app/layout-nav/side-nav/side-nav.component.html
@@ -1,15 +1,15 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav-content>
       <mat-toolbar color="primary" class="blog-toobar-fixed">
-        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="show">
-          <mat-icon aria-label="Side nav toggle icon">Home</mat-icon>
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button [routerLink]="['/']">
+          <mat-icon aria-label="Side nav toggle icon" >Home</mat-icon>
         </button>
         <div class="full_right"></div>
         <div class="m-r-5 account-name" mat-icon-button [matMenuTriggerFor]="toolbarMenu">Phatcharaphan Ananpreechakun</div>
           <div class="m-t-50">
             <mat-menu #toolbarMenu="matMenu" yPosition="below">
-              <button mat-menu-item>Profile</button>
-              <button mat-menu-item>Logout</button>
+              <button mat-menu-item [routerLink]="['/profile']">Profile</button>
+              <button mat-menu-item>Sign out</button>
             </mat-menu>
           </div>
       </mat-toolbar>
