create state for profile

--- a/src/app/layout-nav/side-nav/side-nav.component.html
+++ b/src/app/layout-nav/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
             </mat-menu>
           </div>
       </mat-toolbar>
-      <div class="blog-content" align="center">
+      <div class="subjects-state-content" align="center">
         <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
